# common-tool

./: CMakeLists.txt  README.md
common-tool/: CMakeLists.txt  common-tool.cpp
common-tool/inc/: common-tool.hpp  common.hpp  export_results.h
common-tool/src/: common-tool.cpp  common.cpp
test/: CMakeLists.txt  common-tool-test.cpp
